Creacion de otros controladores, y arreglo de clases para sonarQube, falta arreglar otras clases